# osprayplot

./: .gitmodules  CMakeLists.txt  README.md  drawnowOspray.m  ospray_colors.m  ospray_scene_basic_setup.m  ospray_sphere.m  ospray_test.m  ospraylight.m  ospraylightobj.m  ospraymeshobj.m  osprayplot_handle.m  ospraytexture.m  ospraytextureobj.m  ospraytsurf.m
include/: osprayplot_cpp.h
src/: osprayplot_cpp.cpp  osprayplot_mex.cpp
